fix overflow-x of review

--- a/app/assets/stylesheets/components/_articles.scss
+++ b/app/assets/stylesheets/components/_articles.scss
@@ -38,7 +38,7 @@ article.post_show {
     padding-bottom: 1em;
 
     > * {
-      margin-right: 2em;
+      margin-right: 20px;
     }
 
     .voting {
